--- a/css cheatsheet/style.css
+++ b/css cheatsheet/style.css
@@ -1,41 +1,109 @@
+/*
 *{
-    margin:0;
-    padding:0;
+    margin: 0%;
+    padding: 0%;
 }
+*/
+
 body{
-    background-color:#ffffff;
-    color: #555555;
+    background-color:#f4f4f4;
+    color: #555;
 
     font: normal 16px Arial, Helvetica, Sans-serif;
 
     line-height: 1.6em;
-    margin:0%;
+    margin:0;
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+
+a:hover{
+    color: red;
+}
+
+a:active{
+    color: green;
+
+}
+
+a:visited{
+    color: yellow;
+}
 
 .container{
     width: 80%;
     margin: auto;
-
- border-right: 5px red solid;
- border-left: 5px red solid;
- border-top: 5px red solid; 
- border-bottom: 5px red solid;  
- 
-border: 5px red solid;
-border-width: 3px;
-border-bottom-width: 10px;
-border-top-style: dotted;
-border: 5px red solid;
-padding: 20px;
-margin-top: 20px;
-margin: 20px 0;
-
 }
-.box-1 h1{ 
+
+.box-1{ 
+    background-color: #333;
+    color: #fff;
+
+    border-right: 5px red solid;
+    border-left: 5px red solid;
+    border-top: 5px red solid; 
+    border-bottom: 5px red solid;  
+ 
+    border: 5px red solid;
+
+    border-width: 3px;
+    border-bottom-width: 10px;
+    border-top-style: dotted;
+
+    border: 5px red solid;
+
+    padding: 20px;
+
+    margin-top: 20px;
+    margin: 20px 0;
+}
+
+.box-1 h1{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 800;
-    font-size: italic;
-    text-decoration: ;
+    font-size:italic;
+    text-decoration:underline;
+    text-transform:uppercase;
+    letter-spacing:0.2em;
+    word-spacing: 1em;
+}
 
+.box-2{
+    border: 3px dotted #ccc;
+    padding: 20px;
+    margin: 20px 0;   
+}
+.categories{
+    border: 1px #ccc solid;
+    padding: 10px;
+    border-radius: 15px;
+
+}
+
+.categories h2{
+    text-align: center;
+}
+
+.categories ul{
+    padding: 0;
+    padding left: 20px;
+    list-style: square;
+    list-style: none;
+}
+.categories li{
+    padding-bottom: 6px;
+    border-bottom: dotted 1px #333;
+    list-style-image: url(../images/check.png)
+
+}
+
+.my-form{
+    padding: 20px;
+}
+
+.my-form .form-group{
+    padding-bottom: 15px;
 }
