--- a/css cheatsheet/style.css
+++ b/css cheatsheet/style.css
@@ -96,7 +96,7 @@ a:visited{
 .categories li{
     padding-bottom: 6px;
     border-bottom: dotted 1px #333;
-    list-style-image: url(../images/check.png)
+    list-style-image: url()
 
 }
 
