--- a/css cheatsheet/style.css
+++ b/css cheatsheet/style.css
@@ -157,3 +157,47 @@ a:visited{
     box-sizing: border-box;
 }
 
+.p-box{
+    width: 800px;
+    height: 500px;
+    border: 1px solid black;
+    margin-top: 30px;
+    position: relative;
+    background-image: url('./images/abstract.jpg');
+    background-position: 100px 200px;
+    background-repeat: no-repeat;
+    background-position: center;
+
+}
+
+.p-box h1{
+    position: absolute;
+    top: 100px;
+    left: 200px;
+}
+
+.p-box h2{
+    position: absolute;
+    bottom: 40px;
+    right: 100px;
+}
+
+.fix-me{
+    position: fixed;
+    top: 400px;
+}
+
+.my-list li:first-child {
+    background-color: red;
+}
+
+.my-list li:last-child {
+    background-color: blue;
+}
+.my-list li:nth-child(5){
+    background-color: yellow;
+}
+
+.my-list li:nth-child(even){
+    background-color: grey;
+}
