--- a/my website/css/style.css
+++ b/my website/css/style.css
@@ -64,7 +64,7 @@ body{
 #sidebar{
     float: right;
     width: 30%;
-    background:#333;
+    background:rgb(44, 44, 44);
     color: white;
     padding: 10px;
     box-sizing: border-box;
